@@ -102,8 +102,23 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
 public class YoutubeStreamExtractor extends StreamExtractor {
+
     private static final String PREMIERED = "Premiered ";
     private static final String PREMIERED_ON = "Premiered on ";
+    private static final String FORMATS = "formats";
+    private static final String ADAPTIVE_FORMATS = "adaptiveFormats";
+    private static final String STREAMING_DATA = "streamingData";
+    private static final String NEXT = "next";
+    private static final String SIGNATURE_CIPHER = "signatureCipher";
+    private static final String CIPHER = "cipher";
+    private static final String PLAYER_CAPTIONS_TRACKLIST_RENDERER
+            = "playerCaptionsTracklistRenderer";
+    private static final String CAPTIONS = "captions";
+    private static final String PLAYABILITY_STATUS = "playabilityStatus";
+    private static final String THUMBNAIL = "thumbnail";
+    private static final String THUMBNAILS = "thumbnails";
+    private static final String VIDEO_DETAILS = "videoDetails";
+    private static final String TITLE = "title";
 
     @Nullable
     private static PoTokenProvider poTokenProvider;
@@ -116,13 +131,12 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     private JsonObject iosStreamingData;
     @Nullable
     private JsonObject androidStreamingData;
-    @Nullable
-    private JsonObject html5StreamingData;
 
     private JsonObject videoPrimaryInfoRenderer;
     private JsonObject videoSecondaryInfoRenderer;
     private JsonObject playerMicroFormatRenderer;
     private JsonObject playerCaptionsTracklistRenderer;
+    private JsonArray thumbnailsArray;
     private int ageLimit = -1;
     private StreamType streamType;
 
@@ -132,10 +146,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     // three different strings are used.
     private String iosCpn;
     private String androidCpn;
-    private String html5Cpn;
 
-    @Nullable
-    private String html5StreamingUrlsPoToken;
     @Nullable
     private String androidStreamingUrlsPoToken;
     @Nullable
@@ -156,10 +167,11 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         String title;
 
         // Try to get the video's original title, which is untranslated
-        title = playerResponse.getObject("videoDetails").getString("title");
+        title = playerResponse.getObject(VIDEO_DETAILS)
+                .getString(TITLE);
 
         if (isNullOrEmpty(title)) {
-            title = getTextFromObject(getVideoPrimaryInfoRenderer().getObject("title"));
+            title = getTextFromObject(getVideoPrimaryInfoRenderer().getObject(TITLE));
 
             if (isNullOrEmpty(title)) {
                 throw new ParsingException("Could not get name");
@@ -246,9 +258,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     public List<Image> getThumbnails() throws ParsingException {
         assertPageFetched();
         try {
-            return getImagesFromThumbnailsArray(playerResponse.getObject("videoDetails")
-                    .getObject("thumbnail")
-                    .getArray("thumbnails"));
+            return getImagesFromThumbnailsArray(thumbnailsArray);
         } catch (final Exception e) {
             throw new ParsingException("Could not get thumbnails");
         }
@@ -272,7 +282,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
             return new Description(attributedDescription, Description.HTML);
         }
 
-        String description = playerResponse.getObject("videoDetails")
+        String description = playerResponse.getObject(VIDEO_DETAILS)
                 .getString("shortDescription");
         if (description == null) {
             final JsonObject descriptionObject = playerMicroFormatRenderer.getObject("description");
@@ -322,13 +332,12 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         assertPageFetched();
 
         try {
-            final String duration = playerResponse
-                    .getObject("videoDetails")
+            final String duration = playerResponse.getObject(VIDEO_DETAILS)
                     .getString("lengthSeconds");
             return Long.parseLong(duration);
         } catch (final Exception e) {
             return getDurationFromFirstAdaptiveFormat(Arrays.asList(
-                    html5StreamingData, androidStreamingData, iosStreamingData));
+                    androidStreamingData, iosStreamingData));
         }
     }
 
@@ -374,7 +383,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
                 .getObject("videoViewCountRenderer").getObject("viewCount"));
 
         if (isNullOrEmpty(views)) {
-            views = playerResponse.getObject("videoDetails").getString("viewCount");
+            views = playerResponse.getObject(VIDEO_DETAILS)
+                    .getString("viewCount");
 
             if (isNullOrEmpty(views)) {
                 throw new ParsingException("Could not get view count");
@@ -393,7 +403,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         assertPageFetched();
 
         // If ratings are not allowed, there is no like count available
-        if (!playerResponse.getObject("videoDetails").getBoolean("allowRatings")) {
+        if (!playerResponse.getObject(VIDEO_DETAILS)
+                .getBoolean("allowRatings")) {
             return -1L;
         }
 
@@ -515,7 +526,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         // Don't use the id in the videoSecondaryRenderer object to get real id of the uploader
         // The difference between the real id of the channel and the displayed id is especially
         // visible for music channels and autogenerated channels.
-        final String uploaderId = playerResponse.getObject("videoDetails").getString("channelId");
+        final String uploaderId = playerResponse.getObject(VIDEO_DETAILS)
+                .getString("channelId");
         if (!isNullOrEmpty(uploaderId)) {
             return YoutubeChannelLinkHandlerFactory.getInstance().getUrl("channel/" + uploaderId);
         }
@@ -531,7 +543,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         // Don't use the name in the videoSecondaryRenderer object to get real name of the uploader
         // The difference between the real name of the channel and the displayed name is especially
         // visible for music channels and autogenerated channels.
-        final String uploaderName = playerResponse.getObject("videoDetails").getString("author");
+        final String uploaderName = playerResponse.getObject(VIDEO_DETAILS)
+                .getString("author");
         if (isNullOrEmpty(uploaderName)) {
             throw new ParsingException("Could not get uploader name");
         }
@@ -558,7 +571,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         }
 
         return YoutubeParsingHelper.hasArtistOrVerifiedIconBadgeAttachment(
-            channel.getObject("title").getArray("attachmentRuns"));
+            channel.getObject(TITLE)
+                    .getArray("attachmentRuns"));
     }
 
     @Nonnull
@@ -579,8 +593,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
                     .getObject("image")
                     .getArray("sources"));
         } else {
-            imageList = getImagesFromThumbnailsArray(
-                owner.getObject("thumbnail").getArray("thumbnails"));
+            imageList = getImagesFromThumbnailsArray(owner.getObject(THUMBNAIL)
+                    .getArray(THUMBNAILS));
         }
 
         if (imageList.isEmpty() && ageLimit == NO_AGE_LIMIT) {
@@ -625,9 +639,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         // There is no DASH manifest available with the iOS client
         return getManifestUrl(
                 "dash",
-                Arrays.asList(
-                        new Pair<>(androidStreamingData, androidStreamingUrlsPoToken),
-                        new Pair<>(html5StreamingData, html5StreamingUrlsPoToken)),
+                List.of(new Pair<>(androidStreamingData, androidStreamingUrlsPoToken)),
                 // Return version 7 of the DASH manifest, which is the latest one, reducing
                 // manifest size and allowing playback with some DASH players
                 "mpd_version=7");
@@ -645,10 +657,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         // unless a Safari macOS user agent is used
         return getManifestUrl(
                 "hls",
-                Arrays.asList(
-                        new Pair<>(iosStreamingData, iosStreamingUrlsPoToken),
-                        new Pair<>(androidStreamingData, androidStreamingUrlsPoToken),
-                        new Pair<>(html5StreamingData, html5StreamingUrlsPoToken)),
+                List.of(new Pair<>(iosStreamingData, iosStreamingUrlsPoToken),
+                        new Pair<>(androidStreamingData, androidStreamingUrlsPoToken)),
                 "");
     }
 
@@ -752,7 +762,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     private void setStreamType() {
         if (playerResponse.getObject(PLAYABILITY_STATUS).has("liveStreamability")) {
             streamType = StreamType.LIVE_STREAM;
-        } else if (playerResponse.getObject("videoDetails").getBoolean("isPostLiveDvr", false)) {
+        } else if (playerResponse.getObject(VIDEO_DETAILS)
+                .getBoolean("isPostLiveDvr", false)) {
             streamType = StreamType.POST_LIVE_STREAM;
         } else {
             streamType = StreamType.VIDEO_STREAM;
@@ -833,17 +844,6 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     // Fetch page
     //////////////////////////////////////////////////////////////////////////*/
 
-    private static final String FORMATS = "formats";
-    private static final String ADAPTIVE_FORMATS = "adaptiveFormats";
-    private static final String STREAMING_DATA = "streamingData";
-    private static final String NEXT = "next";
-    private static final String SIGNATURE_CIPHER = "signatureCipher";
-    private static final String CIPHER = "cipher";
-    private static final String PLAYER_CAPTIONS_TRACKLIST_RENDERER
-            = "playerCaptionsTracklistRenderer";
-    private static final String CAPTIONS = "captions";
-    private static final String PLAYABILITY_STATUS = "playabilityStatus";
-
     @Override
     public void onFetchPage(@Nonnull final Downloader downloader)
             throws IOException, ExtractionException {
@@ -855,20 +855,20 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         final PoTokenProvider poTokenProviderInstance = poTokenProvider;
         final boolean noPoTokenProviderSet = poTokenProviderInstance == null;
 
-        fetchHtml5Client(localization, contentCountry, videoId, poTokenProviderInstance);
-
-        setStreamType();
-
         final PoTokenResult androidPoTokenResult = noPoTokenProviderSet ? null
                 : poTokenProviderInstance.getAndroidClientPoToken(videoId);
 
         fetchAndroidClient(localization, contentCountry, videoId, androidPoTokenResult);
+
+        setStreamType();
 
         if (fetchIosClient) {
             final PoTokenResult iosPoTokenResult = noPoTokenProviderSet ? null
                     : poTokenProviderInstance.getIosClientPoToken(videoId);
             fetchIosClient(localization, contentCountry, videoId, iosPoTokenResult);
         }
+
+        fetchWebClientMetadataAndSetThumbnails(localization, contentCountry, videoId);
 
         final byte[] nextBody = JsonWriter.string(
                 prepareDesktopJsonBuilder(localization, contentCountry)
@@ -889,174 +889,76 @@ public class YoutubeStreamExtractor extends StreamExtractor {
 
         final String reason = playabilityStatus.getString("reason");
 
-        if (status.equalsIgnoreCase("login_required")) {
-            if (reason == null) {
-                final String message = playabilityStatus.getArray("messages").getString(0);
-                if (message != null && message.contains("private")) {
+        if (reason != null) {
+            if (status.equalsIgnoreCase("login_required")) {
+                if (reason.contains("inappropriate for some users")) {
+                    throw new AgeRestrictedContentException(
+                            "This age-restricted video cannot be watched anonymously");
+                }
+
+                if (reason.contains("private")) {
                     throw new PrivateContentException("This video is private");
                 }
-            } else if (reason.contains("age")) {
-                throw new AgeRestrictedContentException(
-                        "This age-restricted video cannot be watched anonymously");
-            }
-        }
 
-        if ((status.equalsIgnoreCase("unplayable") || status.equalsIgnoreCase("error"))
-                && reason != null) {
-            if (reason.contains("Music Premium")) {
-                throw new YoutubeMusicPremiumContentException();
-            }
-
-            if (reason.contains("payment")) {
-                throw new PaidContentException("This video is a paid video");
-            }
-
-            if (reason.contains("members-only")) {
-                throw new PaidContentException("This video is only available"
-                        + " for members of the channel of this video");
-            }
-
-            if (reason.contains("unavailable")) {
-                final String detailedErrorMessage = getTextFromObject(playabilityStatus
-                        .getObject("errorScreen")
-                        .getObject("playerErrorMessageRenderer")
-                        .getObject("subreason"));
-                if (detailedErrorMessage != null && detailedErrorMessage.contains("country")) {
-                    throw new GeographicRestrictionException(
-                            "This video is not available in client's country.");
-                } else {
-                    throw new ContentNotAvailableException(
-                            Objects.requireNonNullElse(detailedErrorMessage, reason));
+                if (reason.contains("a bot")) {
+                    throw new SignInConfirmNotBotException(
+                            "YouTube probably temporarily blocked anonymous watch access with this"
+                                    + " IP , got error " + status + ": \"" + reason + "\"");
                 }
             }
 
-            if (reason.contains("age-restricted")) {
-                throw new AgeRestrictedContentException(
-                        "This age-restricted video cannot be watched anonymously");
-            }
-        }
+            if (status.equalsIgnoreCase("unplayable") || status.equalsIgnoreCase("error")) {
+                if (reason.contains("Music Premium")) {
+                    throw new YoutubeMusicPremiumContentException();
+                }
 
-        // "Sign in to confirm that you're not a bot"
-        if (reason != null && reason.contains("a bot")) {
-            throw new SignInConfirmNotBotException(
-                    "YouTube probably temporarily blocked this IP, got error "
-                            + status + ": \"" + reason + "\"");
+                if (reason.contains("payment")) {
+                    throw new PaidContentException("This video is a paid video");
+                }
+
+                if (reason.contains("members")) {
+                    throw new PaidContentException("This video is only available for members of "
+                            + "the channel of this video");
+                }
+
+                if (reason.contains("country")) {
+                    throw new GeographicRestrictionException(
+                            "This video is not available in client's country.");
+                }
+            }
         }
 
         throw new ContentNotAvailableException("Got error " + status + ": \"" + reason + "\"");
     }
 
-    private void fetchHtml5Client(@Nonnull final Localization localization,
-                                  @Nonnull final ContentCountry contentCountry,
-                                  @Nonnull final String videoId,
-                                  @Nullable final PoTokenProvider poTokenProviderInstance)
-            throws IOException, ExtractionException {
-        html5Cpn = generateContentPlaybackNonce();
-
-        final JsonObject webPlayerResponse = YoutubeStreamHelper.getWebMetadataPlayerResponse(
-                    localization, contentCountry, videoId);
-
-        throwExceptionIfPlayerResponseNotValid(webPlayerResponse, videoId);
-
-        // Save the webPlayerResponse into playerResponse in the case the video cannot be
-        // played, so some metadata can be retrieved
-        playerResponse = webPlayerResponse;
-
-        // The microformat JSON object of the content is only returned on the WEB client,
-        // so we need to store it instead of getting it directly from the playerResponse
-        playerMicroFormatRenderer = playerResponse.getObject("microformat")
-                .getObject("playerMicroformatRenderer");
-
-        final JsonObject playabilityStatus = webPlayerResponse.getObject(PLAYABILITY_STATUS);
-
-        if (isVideoAgeRestricted(playabilityStatus)) {
-            fetchHtml5EmbedClient(localization, contentCountry, videoId,
-                    poTokenProviderInstance == null ? null
-                            : poTokenProviderInstance.getWebEmbedClientPoToken(videoId));
-        } else {
-            checkPlayabilityStatus(playabilityStatus);
-        }
-    }
-
-    private static void throwExceptionIfPlayerResponseNotValid(
-            @Nonnull final JsonObject webPlayerResponse,
-            @Nonnull final String videoId) throws ExtractionException {
-        if (isPlayerResponseNotValid(webPlayerResponse, videoId)) {
-            // Check the playability status, as private and deleted videos and invalid video
-            // IDs do not return the ID provided in the player response
-            // When the requested video is playable and a different video ID is returned, it
-            // has the OK playability status, meaning the ExtractionException after this check
-            // will be thrown
-            checkPlayabilityStatus(webPlayerResponse.getObject(PLAYABILITY_STATUS));
-            throw new ExtractionException("WEB player response is not valid");
-        }
-    }
-
-    private void fetchHtml5EmbedClient(@Nonnull final Localization localization,
-                                       @Nonnull final ContentCountry contentCountry,
-                                       @Nonnull final String videoId,
-                                       @Nullable final PoTokenResult webEmbedPoTokenResult)
-            throws IOException, ExtractionException {
-        html5Cpn = generateContentPlaybackNonce();
-
-        final JsonObject webEmbeddedPlayerResponse =
-                YoutubeStreamHelper.getWebEmbeddedPlayerResponse(localization, contentCountry,
-                        videoId, html5Cpn, webEmbedPoTokenResult,
-                        YoutubeJavaScriptPlayerManager.getSignatureTimestamp(videoId));
-
-        // Save the webEmbeddedPlayerResponse into playerResponse in the case the video cannot be
-        // played, so some metadata can be retrieved
-        playerResponse = webEmbeddedPlayerResponse;
-
-        // Check if the playability status in the player response, if the age-restriction could not
-        // be bypassed, an exception will be thrown
-        checkPlayabilityStatus(webEmbeddedPlayerResponse.getObject(PLAYABILITY_STATUS));
-
-        if (isPlayerResponseNotValid(webEmbeddedPlayerResponse, videoId)) {
-            throw new ExtractionException("WEB_EMBEDDED_PLAYER player response is not valid");
-        }
-
-        html5StreamingData = webEmbeddedPlayerResponse.getObject(STREAMING_DATA);
-        playerCaptionsTracklistRenderer = webEmbeddedPlayerResponse.getObject(CAPTIONS)
-                .getObject(PLAYER_CAPTIONS_TRACKLIST_RENDERER);
-        if (webEmbedPoTokenResult != null) {
-            html5StreamingUrlsPoToken = webEmbedPoTokenResult.streamingDataPoToken;
-        }
-    }
-
     private void fetchAndroidClient(@Nonnull final Localization localization,
                                     @Nonnull final ContentCountry contentCountry,
                                     @Nonnull final String videoId,
-                                    @Nullable final PoTokenResult androidPoTokenResult) {
-        try {
-            androidCpn = generateContentPlaybackNonce();
+                                    @Nullable final PoTokenResult androidPoTokenResult)
+            throws IOException, ExtractionException {
+        androidCpn = generateContentPlaybackNonce();
 
-            final JsonObject androidPlayerResponse;
-            if (androidPoTokenResult == null) {
-                androidPlayerResponse = YoutubeStreamHelper.getAndroidReelPlayerResponse(
-                        contentCountry, localization, videoId, androidCpn);
-            } else {
-                androidPlayerResponse = YoutubeStreamHelper.getAndroidPlayerResponse(
-                        contentCountry, localization, videoId, androidCpn,
-                        androidPoTokenResult);
-            }
+        if (androidPoTokenResult == null) {
+            playerResponse = YoutubeStreamHelper.getAndroidReelPlayerResponse(
+                    contentCountry, localization, videoId, androidCpn);
+        } else {
+            playerResponse = YoutubeStreamHelper.getAndroidPlayerResponse(
+                    contentCountry, localization, videoId, androidCpn,
+                    androidPoTokenResult);
+        }
 
-            if (!isPlayerResponseNotValid(androidPlayerResponse, videoId)) {
-                androidStreamingData = androidPlayerResponse.getObject(STREAMING_DATA);
+        checkPlayabilityStatus(playerResponse.getObject(PLAYABILITY_STATUS));
+        if (isPlayerResponseNotValid(playerResponse, videoId)) {
+            throw new ExtractionException("ANDROID player response is not valid");
+        }
 
-                if (isNullOrEmpty(playerCaptionsTracklistRenderer)) {
-                    playerCaptionsTracklistRenderer =
-                            androidPlayerResponse.getObject(CAPTIONS)
-                                    .getObject(PLAYER_CAPTIONS_TRACKLIST_RENDERER);
-                }
+        androidStreamingData = playerResponse.getObject(STREAMING_DATA);
 
-                if (androidPoTokenResult != null) {
-                    androidStreamingUrlsPoToken = androidPoTokenResult.streamingDataPoToken;
-                }
-            }
-        } catch (final Exception ignored) {
-            // Ignore exceptions related to ANDROID client fetch or parsing, as it is not
-            // compulsory to play contents
+        playerCaptionsTracklistRenderer = playerResponse.getObject(CAPTIONS)
+                .getObject(PLAYER_CAPTIONS_TRACKLIST_RENDERER);
+
+        if (androidPoTokenResult != null) {
+            androidStreamingUrlsPoToken = androidPoTokenResult.streamingDataPoToken;
         }
     }
 
@@ -1085,6 +987,47 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         } catch (final Exception ignored) {
             // Ignore exceptions related to IOS client fetch or parsing, as it is not
             // compulsory to play contents
+        }
+    }
+
+    private void fetchWebClientMetadataAndSetThumbnails(
+            @Nonnull final Localization localization,
+            @Nonnull final ContentCountry contentCountry,
+            @Nonnull final String videoId) {
+        try {
+            final JsonObject webPlayerResponse = YoutubeStreamHelper.getWebMetadataPlayerResponse(
+                    localization, contentCountry, videoId);
+
+            // Important note: we don't checkPlayabilityStatus() here, because we use this request
+            // exclusively for metadata, not for extracting streams. It turns out that when
+            // YouTube returns a playability status error, the metadata may still be there.
+
+            if (!isPlayerResponseNotValid(webPlayerResponse, videoId)) {
+                // The microformat JSON object of the content is only returned on the WEB client,
+                // so we need to store it instead of getting it directly from the playerResponse
+                playerMicroFormatRenderer = webPlayerResponse.getObject("microformat")
+                        .getObject("playerMicroformatRenderer");
+
+                // Try to use web player response thumbnails first, as they should contain higher
+                // quality ones than mobile clients
+                final JsonObject thumbnailWebJsonObj = webPlayerResponse.getObject(VIDEO_DETAILS)
+                        .getObject(THUMBNAIL);
+                if (thumbnailWebJsonObj.containsKey(THUMBNAILS)) {
+                    thumbnailsArray = thumbnailWebJsonObj.getArray(THUMBNAILS);
+                } else {
+                    thumbnailsArray = playerResponse.getObject(VIDEO_DETAILS)
+                            .getObject(THUMBNAIL)
+                            .getArray(THUMBNAILS);
+                }
+            }
+        } catch (final Exception e) {
+            // Ignore exceptions related to WEB client fetch or parsing, as it is not
+            // compulsory to play contents
+            // Set thumbnails from playerResponse
+            playerMicroFormatRenderer = new JsonObject();
+            thumbnailsArray = playerResponse.getObject(VIDEO_DETAILS)
+                    .getObject(THUMBNAIL)
+                    .getArray(THUMBNAILS);
         }
     }
 
@@ -1121,15 +1064,8 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     private static boolean isPlayerResponseNotValid(
             @Nonnull final JsonObject playerResponse,
             @Nonnull final String videoId) {
-        return !videoId.equals(playerResponse.getObject("videoDetails")
+        return !videoId.equals(playerResponse.getObject(VIDEO_DETAILS)
                 .getString("videoId"));
-    }
-
-    private static boolean isVideoAgeRestricted(@Nonnull final JsonObject playabilityStatus) {
-        // This is language dependent
-        return "login_required".equalsIgnoreCase(playabilityStatus.getString("status"))
-                && playabilityStatus.getString("reason", "")
-                .contains("age");
     }
 
     /*//////////////////////////////////////////////////////////////////////////
@@ -1183,18 +1119,6 @@ public class YoutubeStreamExtractor extends StreamExtractor {
             final List<T> streamList = new ArrayList<>();
 
             java.util.stream.Stream.of(
-                    /*
-                    Use the html5StreamingData object first because YouTube should have less
-                    control on HTML5 clients, especially for poTokens
-
-                    The androidStreamingData is used as second way as the Android client extraction
-                    is more likely to break
-
-                    As iOS streaming data is affected by poTokens and not passing them should lead
-                    to 403 responses, it should be used in the last resort
-                     */
-                    new Pair<>(html5StreamingData,
-                            new Pair<>(html5Cpn, html5StreamingUrlsPoToken)),
                     new Pair<>(androidStreamingData,
                             new Pair<>(androidCpn, androidStreamingUrlsPoToken)),
                     new Pair<>(iosStreamingData,
@@ -1562,6 +1486,12 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     @Override
     public Privacy getPrivacy() {
         return playerMicroFormatRenderer.getBoolean("isUnlisted")
+                || getVideoPrimaryInfoRenderer().getArray("badges")
+                .streamAsJsonObjects()
+                .anyMatch(badge ->
+                        "PRIVACY_UNLISTED".equals(badge.getObject("metadataBadgeRenderer")
+                                .getObject("icon")
+                                .getString("iconType")))
                 ? Privacy.UNLISTED
                 : Privacy.PUBLIC;
     }
@@ -1585,7 +1515,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
         final JsonArray contents = metadataRowRenderer.getArray("contents");
         final String license = getTextFromObject(contents.getObject(0));
         return license != null
-                && "Licence".equals(getTextFromObject(metadataRowRenderer.getObject("title")))
+                && "Licence".equals(getTextFromObject(metadataRowRenderer.getObject(TITLE)))
                 ? license
                 : "YouTube licence";
     }
@@ -1598,7 +1528,7 @@ public class YoutubeStreamExtractor extends StreamExtractor {
     @Nonnull
     @Override
     public List<String> getTags() {
-        return JsonUtils.getStringListFromJsonArray(playerResponse.getObject("videoDetails")
+        return JsonUtils.getStringListFromJsonArray(playerResponse.getObject(VIDEO_DETAILS)
                 .getArray("keywords"));
     }
 
@@ -1652,17 +1582,16 @@ public class YoutubeStreamExtractor extends StreamExtractor {
                 break;
             }
 
-            final String title = getTextFromObject(segmentJson.getObject("title"));
+            final String title = getTextFromObject(segmentJson.getObject(TITLE));
             if (isNullOrEmpty(title)) {
                 throw new ParsingException("Could not get stream segment title.");
             }
 
             final StreamSegment segment = new StreamSegment(title, startTimeSeconds);
             segment.setUrl(getUrl() + "?t=" + startTimeSeconds);
-            if (segmentJson.has("thumbnail")) {
-                final JsonArray previewsArray = segmentJson
-                        .getObject("thumbnail")
-                        .getArray("thumbnails");
+            if (segmentJson.has(THUMBNAIL)) {
+                final JsonArray previewsArray = segmentJson.getObject(THUMBNAIL)
+                        .getArray(THUMBNAILS);
                 if (!previewsArray.isEmpty()) {
                     // Assume that the thumbnail with the highest resolution is at the last position
                     final String url = previewsArray
